# wasmpy-build

./: .gitignore  LICENSE  MANIFEST.in  README.md  analyze.py  appveyor.yml  generate.py  patch_headers.py  pyconfig32.h  pyconfig64.h  pyproject.toml  requirements.txt  setup.py
patches/: 3.10.patch  3.11.patch  3.8.patch  3.9.patch
wasmpy-build/: __init__.py
wasmpy-build/include/cp38/: patchlevel.h  pyport.h
wasmpy-build/include/cp39/: pyport.h
wasmpy_build/: __init__.py  __main__.py  cli.py  compiler.py  core.py
wasmpy_build/include/: CPython LICENSE
wasmpy_build/include/cp310/: pyport.h
