[build-system]
requires = [
    "setuptools >= 60",
    "setuptools-scm >= 8.0"
]

[project]
name = "wasmpy-build"
description = "WebAssembly build tool for CPython C/C++ extensions"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Olivia Ryan", email = "olivia.r.dev@gmail.com"},
]
classifiers = [
    "Programming Language :: C",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Environment :: WebAssembly",
    "Environment :: WebAssembly :: WASI",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "appdirs",
    "requests",
    "tqdm",
]
requires-python = ">= 3.8"
dynamic = ["version"]

[project.scripts]
wasmpy-build = "wasmpy_build:buildc"
wasmpy-build-cpp = "wasmpy_build:buildcpp"

[tool.setuptools]
packages = ["wasmpy_build"]

[tool.setuptools_scm]
